@@ -3,6 +3,12 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+2/8/25: Fixed pixel sizes in frame stack mdoc file when there is a refined
+pixel size defined.
+
+2/8/25: Add script commands to report objective strength, update an imaging
+state, and report properties of a state.
+
 2/7/25: Fixed storing Search shift offsets in Search states (In 4.1).
 
 2/5/25: Made sure Navigator files for multigrid all have Acquire polygons if
